Tooltips have solid background beneath their arrows
Categories
(DevTools :: Shared Components, defect, P2)
Tracking
(firefox-esr115 unaffected, firefox121 unaffected, firefox122 unaffected, firefox123 verified, firefox124 verified)
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox121 | --- | unaffected |
firefox122 | --- | unaffected |
firefox123 | --- | verified |
firefox124 | --- | verified |
People
(Reporter: nchevobbe, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
This is visible in the tooltip we have for css variable, but also for the devtools menu and more (see screenshot)
Reporter | ||
Comment 1•1 year ago
|
||
mozregression points to Bug 1872399
Comment 2•1 year ago
|
||
:emilio, since you are the author of the regressor, bug 1872399, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Assignee | ||
Updated•1 year ago
|
Assignee | ||
Comment 3•1 year ago
|
||
Before the first part of bug 1872399, that would use
WindowShadow::Default, which didn't create a vibrant effect etc, which
causes the background here.
Make it more explicit by calling this "Panel". The second part of
bug 1872399 already did this.
Updated•1 year ago
|
Comment 5•1 year ago
|
||
bugherder |
Updated•1 year ago
|
Comment 6•1 year ago
|
||
I managed to reproduce this issue in Nightly v123.0a1 (2024-01-04) in both MacOS 11 and also an even worse looking tooltip in Windows 10. I confirm the fix in Beta v123.0b5 and the latest Nightly v124.0a1.
Description
•