Bug 1872983 - Restore behavior of -moz-window-shadow: auto and appearance: none. r=dholbert

Before the first part of bug 1872399, that would use
WindowShadow::Default, which didn't create a vibrant effect etc, which
causes the background here.

Make it more explicit by calling this "Panel". The second part of
bug 1872399 already did this.

Differential Revision: https://phabricator.services.mozilla.com/D197648